# api_documentation.yaml
@@ -1,73 +1,91 @@
-openapi: 3.0.1
+openapi: 3.0.0
 info:
-  title: ParkSpotter Parking API
-  description: This API handles information from the ParkSpotter parking database
-  version: 1.0.0
+  version: 1.0
+  title: ParkSpotter API
+  description: API for managing parkings.
 servers:
-  - url: http://localhost:8080/apiParcheggi/parcheggi
-tags:
-  - name: parking lots
-    description: This endpoint manages all information related to parking lots
+  - url: http://localhost:8080/api/v1
+    description: Localhost
 paths:
-  /:
+  /parkings:
     get:
-      tags:
-        - parcheggi
-      summary: Show all parking lots
+      summary: Get all parkings
       responses:
         '200':
-          description: OK
+          description: Successful operation
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Parcheggio'
+                  $ref: '#/components/schemas/Parking'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
     post:
-      tags:
-        - parcheggi
-      summary: Create a new parking lot
+      summary: Create a new parking
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ParcheggioInput'
+              $ref: '#/components/schemas/Parking'
       responses:
         '201':
-          description: Created
+          description: Parking created successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Parcheggio'
-  /{id}:
+                $ref: '#/components/schemas/Parking'
+        '400':
+          description: Bad request, invalid input
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+  /parkings/{id}:
     get:
-      tags:
-        - parcheggi
-      summary: Shows detailed information of a specific patch by its ID
+      summary: Get a parking by ID
       parameters:
-        - in: path
-          name: id
+        - name: id
+          in: path
           required: true
-          description: Parking ID to display
           schema:
             type: string
       responses:
         '200':
-          description: OK
+          description: Successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Parcheggio'
+                $ref: '#/components/schemas/Parking'
+        '404':
+          description: Parking not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
     patch:
-      tags:
-        - parcheggi
-      summary: Update an existing patch by its ID
+      summary: Update a parking by ID
       parameters:
-        - in: path
-          name: id
+        - name: id
+          in: path
           required: true
-          description: Parking ID to update
           schema:
             type: string
       requestBody:
@@ -75,34 +93,43 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ParcheggioUpdateInput'
+              $ref: '#/components/schemas/PartialParking'
       responses:
         '200':
-          description: OK
+          description: Parking updated successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Parcheggio'
+                $ref: '#/components/schemas/Parking'
+        '400':
+          description: Bad request, invalid input
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '404':
+          description: Parking not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
     delete:
-      tags:
-        - parcheggi
-      summary: Delete an existing parking lot by its ID
+      summary: Delete a parking by ID
       parameters:
-        - in: path
-          name: id
+        - name: id
+          in: path
           required: true
-          description: Parking ID to delete
           schema:
             type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/DeleteReasonInput'
       responses:
         '200':
-          description: OK
+          description: Parking deleted successfully
           content:
             application/json:
               schema:
@@ -110,34 +137,58 @@ paths:
                 properties:
                   message:
                     type: string
+                    description: Message indicating the success of the operation
+        '404':
+          description: Parking not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
 components:
   schemas:
-    ParcheggioInput:
+    Parking:
       type: object
       properties:
         id:
           type: string
+          description: ID of the parking
         name:
           type: string
+          description: Name of the parking
         fee:
           type: number
+          description: Hourly fee
         maxStop:
-          type: integer
+          type: number
+          description: Maximum stop time in minutes
         open:
           type: boolean
+          description: Indicate if the parking is available
         coordinates:
           type: object
           properties:
             nord:
               type: number
+              description: North coordinate
             est:
               type: number
+              description: East coordinate
+          description: Geographic coordinates of the parking
         nParkingSpaces:
           type: integer
+          description: Total number of parking spaces
         vehicleType:
           type: string
+          description: Type of supported vehicle
         nFree:
           type: integer
+          description: Number of free parking spaces
         reservations:
           type: array
           items:
@@ -145,45 +196,50 @@ components:
             properties:
               timeStart:
                 type: string
+                format: date-time
+                description: Reservation start time
               timeEnd:
                 type: string
-      required:
-        - id
-        - name
-        - fee
-        - maxStop
-        - open
-        - coordinates
-        - nParkingSpaces
-        - vehicleType
-        - nFree
-        - reservations
-    Parcheggio:
+                format: date-time
+                description: Reservation end time
+          description: Parking reservations
+    PartialParking:
       type: object
       properties:
         id:
           type: string
+          description: ID of the parking
         name:
           type: string
+          description: Name of the parking
         fee:
           type: number
+          description: Hourly fee
         maxStop:
-          type: integer
+          type: number
+          description: Maximum stop time in minutes
         open:
           type: boolean
+          description: Indicate if the parking is available
         coordinates:
           type: object
           properties:
             nord:
               type: number
+              description: North coordinate
             est:
               type: number
+              description: East coordinate
+          description: Geographic coordinates of the parking
         nParkingSpaces:
           type: integer
+          description: Total number of parking spaces
         vehicleType:
           type: string
+          description: Type of supported vehicle
         nFree:
           type: integer
+          description: Number of free parking spaces
         reservations:
           type: array
           items:
@@ -191,45 +247,16 @@ components:
             properties:
               timeStart:
                 type: string
+                format: date-time
+                description: Reservation start time
               timeEnd:
                 type: string
-    ParcheggioUpdateInput:
+                format: date-time
+                description: Reservation end time
+          description: Parking reservations
+    ErrorResponse:
       type: object
       properties:
-        name:
+        error:
           type: string
-        fee:
-          type: number
-        maxStop:
-          type: integer
-        open:
-          type: boolean
-        coordinates:
-          type: object
-          properties:
-            nord:
-              type: number
-            est:
-              type: number
-        nParkingSpaces:
-          type: integer
-        vehicleType:
-          type: string
-        nFree:
-          type: integer
-        reservations:
-          type: array
-          items:
-            type: object
-            properties:
-              timeStart:
-                type: string
-              timeEnd:
-                type: string
-    DeleteReasonInput:
-      type: object
-      properties:
-        reason:
-          type: string
-      required:
-        - reason
+          description: Error message
